--- a/README.html
+++ b/README.html
@@ -56,22 +56,36 @@ ul.task-list li input[type="checkbox"] {
 <section id="data-and-data-source" class="level3">
 <h3 class="anchored" data-anchor-id="data-and-data-source">Data and data source</h3>
 <p>Data for this table uses modified and randomized versions of the data that I use and collect. But the data does represent the variance, skews, and other data characteristics one would expect to see in our actual dataset.</p>
-</section>
-<section id="data-processing" class="level3">
-<h3 class="anchored" data-anchor-id="data-processing">Data processing</h3>
-<p>dplyr, stringr, tidyr</p>
-</section>
-<section id="html-processing" class="level3">
-<h3 class="anchored" data-anchor-id="html-processing">html processing</h3>
-<p>htmlwidgets, htmltools</p>
-</section>
-<section id="tables" class="level3">
-<h3 class="anchored" data-anchor-id="tables">Tables</h3>
-<p>reactable reactablefrmtr</p>
-</section>
-<section id="colors-labels-etc." class="level3">
-<h3 class="anchored" data-anchor-id="colors-labels-etc.">Colors, labels etc.</h3>
-<p>RColorBrewer, wesanderson, scales</p>
+<table class="caption-top table">
+<colgroup>
+<col style="width: 62%">
+<col style="width: 37%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Purpose / Use Case</th>
+<th>Libraries Used</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><strong>Data Processing</strong></td>
+<td><code>dplyr</code>, <code>stringr</code>, <code>tidyr</code></td>
+</tr>
+<tr class="even">
+<td><strong>HTML Processing</strong></td>
+<td><code>htmlwidgets</code>, <code>htmltools</code></td>
+</tr>
+<tr class="odd">
+<td><strong>Tables / Interactive UI</strong></td>
+<td><code>reactable</code>, <code>reactablefmtr</code></td>
+</tr>
+<tr class="even">
+<td><strong>Colors, Labels, and Formatting</strong></td>
+<td><code>RColorBrewer</code>, <code>wesanderson</code>, <code>scales</code></td>
+</tr>
+</tbody>
+</table>
 </section>
 </section>
 <section id="backgroundcontext" class="level2">
@@ -91,6 +105,9 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li><a href="https://github.com/leoohyama/posit_table_contest_2025/blob/main/eligibility_table.qmd"><code>eligibility_table.qmd</code></a>: Quarto doc with table code and some of the data processing.</li>
 </ul>
+</section>
+<section id="screenshots" class="level2">
+<h2 class="anchored" data-anchor-id="screenshots">Screenshots</h2>
 </section>
 <section id="key-things-i-struggled-with" class="level2">
 <h2 class="anchored" data-anchor-id="key-things-i-struggled-with">Key things I struggled with</h2>
