--- a/README.html
+++ b/README.html
@@ -51,7 +51,7 @@ ul.task-list li input[type="checkbox"] {
 <h1>Posit Table Contest 2025 Submission</h1>
 <p><img src="https://raw.githubusercontent.com/leoohyama/posit_table_contest_2025/main/table_gif.gif" class="img-fluid"></p>
 <section id="coding-environment-and-libraries-used" class="level2">
-<h2 class="anchored" data-anchor-id="coding-environment-and-libraries-used">Coding Environment and libraries used:</h2>
+<h2 class="anchored" data-anchor-id="coding-environment-and-libraries-used">Coding environment and libraries used:</h2>
 <p>This table was built in a R coding environment and rendered to html with Quarto.</p>
 <section id="data-and-data-source" class="level3">
 <h3 class="anchored" data-anchor-id="data-and-data-source">Data and data source</h3>
@@ -64,7 +64,7 @@ ul.task-list li input[type="checkbox"] {
 <thead>
 <tr class="header">
 <th>Purpose / Use Case</th>
-<th>Libraries Used</th>
+<th>R packages used</th>
 </tr>
 </thead>
 <tbody>
@@ -105,9 +105,11 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li><a href="https://github.com/leoohyama/posit_table_contest_2025/blob/main/eligibility_table.qmd"><code>eligibility_table.qmd</code></a>: Quarto doc with table code and some of the data processing.</li>
 </ul>
+<p>Key features include: * Scrolling ticker showing district activity in enrollments compared to the week prior * Filters in the district filter bar that allows for multiple district names (see example in Gif below) * Slider-based filters for 2 levels of the table that allows users to filter for schools and districts within specifc ranges of columns * Title and images scale based on size of screen used to view the table</p>
 </section>
-<section id="screenshots" class="level2">
-<h2 class="anchored" data-anchor-id="screenshots">Screenshots</h2>
+<section id="screenshotsgifs" class="level2">
+<h2 class="anchored" data-anchor-id="screenshotsgifs">Screenshots/Gifs</h2>
+<p><img src="https://raw.githubusercontent.com/leoohyama/posit_table_contest_2025/main/search.gif" class="img-fluid" alt="Filter usage"> The above shows the filter function for districts. The cool thing is that it allows you to filter and search for multiple district names and the names don’t have to be complete case matches. Additionally the filter is dynamic so the user can keep typing while seeing the filtered districts.</p>
 </section>
 <section id="key-things-i-struggled-with" class="level2">
 <h2 class="anchored" data-anchor-id="key-things-i-struggled-with">Key things I struggled with</h2>
