--- a/README.html
+++ b/README.html
@@ -49,6 +49,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="posit-table-contest-2025-submission-blue_book-orange_book" class="level1">
 <h1>Posit Table Contest 2025 Submission :blue_book: :orange_book:</h1>
+<p><a href="https://leoohyama.github.io/posit_table_contest_2025/eligibility_table.html">TABLE LIVES HERE!</a></p>
 <p><img src="https://raw.githubusercontent.com/leoohyama/posit_table_contest_2025/main/table_gif.gif" class="img-fluid"></p>
 <section id="coding-environment-and-libraries-used-computer" class="level2">
 <h2 class="anchored" data-anchor-id="coding-environment-and-libraries-used-computer">Coding environment and libraries used :computer: :</h2>
@@ -110,6 +111,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="screenshotsgifs-camera" class="level2">
 <h2 class="anchored" data-anchor-id="screenshotsgifs-camera">Screenshots/Gifs :camera:</h2>
 <p><img src="https://raw.githubusercontent.com/leoohyama/posit_table_contest_2025/main/search.gif" class="img-fluid" alt="Filter usage"> The above shows the filter function for districts. The cool thing is that it allows you to filter and search for multiple district names and the names don’t have to be complete case matches. Additionally the filter is dynamic so the user can keep typing while seeing the filtered districts.</p>
+<p><img src="https://raw.githubusercontent.com/leoohyama/posit_table_contest_2025/main/slider_filter.gif" class="img-fluid" alt="Slider filter"> The above shows sliding filters found across the table. These sliders allow for specific ranges to be filtered for and can combined with other column filters.</p>
 </section>
 <section id="key-things-i-struggled-with-grimacing" class="level2">
 <h2 class="anchored" data-anchor-id="key-things-i-struggled-with-grimacing">Key things I struggled with :grimacing:</h2>
